syntax = "proto3";

option csharp_namespace = "AttrectoTest.Common.Grpc.Iam";

package iam;

service IamService {
    rpc Ping (PingRequest) returns (PingResponse);  
    rpc GetUserIdByUserName (GetUserIdByUserNameRequest) returns (GetUserIdByUserNameResponse);
    rpc GetUserData (GetUserDataRequest) returns (GetUserDataResponse);
}

message PingRequest {

}

message PingResponse {
    bool success = 1;
}

message GetUserIdByUserNameRequest {
    string userName = 1;
}

message GetUserIdByUserNameResponse {
    int32 userId = 1;
}

message GetUserDataRequest {
    int32 userId = 1;
}

message GetUserDataResponse {
    int32 userId = 1;
    string userName = 2;
    string roles = 3;
}
